/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

import "system/guid.proto";

package dolittle.timeseries.connectors.client;

option csharp_namespace = "Dolittle.TimeSeries.Runtime.Connectors.Client.Grpc";

message PullResult {

}

message PullRequest {
    guid connectorId = 1;
}

// Represents the service for working with connectors that are pull based
service PullConnector {
    rpc Pull(PullRequest) returns(PullResult) {}
}